<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#20262c"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <!--search bar -->
    <LinearLayout
        android:id="@+id/search_box"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/box"
        android:layout_centerHorizontal="true"
     >
    <TextView
        android:id="@+id/search_title"
        style="@style/textStyle"
        android:text="@string/search_title"
        android:layout_below="@id/title"
        />
    <EditText
        android:id="@+id/search_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/search_title"
        android:layout_alignBaseline="@id/search_title"
        android:hint="@string/search_hint"
        android:textColorHint="#aab4bf"
        android:textSize="14sp"
        android:textCursorDrawable="@drawable/cursor_color"
        android:theme="@style/edit_textbox"
        style="@style/listStyle"
        android:paddingTop="10dp"
        android:paddingLeft="30dp"/>

    <ImageButton
        android:id="@+id/search_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_search_black_24dp"
        android:layout_alignBottom="@+id/search_entry"
        android:layout_toEndOf="@+id/title"
        android:layout_marginLeft="70dp"
        android:onClick="search"/>
    </LinearLayout>

    <!--common ingredient radio buttons-->
    <TextView
        android:id="@+id/common_ingredients"
        style="@style/textStyle"
        android:text="@string/common_ingredients"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/search_box"
        android:paddingTop="20dp"/>
     <RadioGroup
        android:id="@+id/ingredient_radio_group"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
         android:background="#505356"
         android:gravity="center"
        android:layout_below="@id/common_ingredients">
        <RadioButton
            android:id="@+id/chicken_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chicken_radio_button"
            style="@style/textStyle"
            android:buttonTint="#878707"
            android:textSize="20sp"
            android:onClick="setCommonIngredient"/>
        <RadioButton
            android:id="@+id/beef_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beef_radio_button"
            android:textSize="20sp"
            android:buttonTint="#878707"
            style="@style/textStyle"
            android:onClick="setCommonIngredient"/>
        <RadioButton
            android:id="@+id/cereal_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cereal_radio_button"
            android:textSize="20sp"
            android:buttonTint="#878707"
            style="@style/textStyle"
            android:checked="true"
            android:onClick="setCommonIngredient"/>
     </RadioGroup>

    <TextView
        android:id="@+id/results_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        style="@style/textStyle"
        android:text="@string/results_label"
        android:layout_below="@id/ingredient_radio_group"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/results_label">

        <ListView
            android:id="@+id/listView1"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:background="#505356"
            />



    </LinearLayout>

    <ImageView android:id="@+id/salad_bowl"
        android:layout_height="435dp"
        android:layout_width="399dp"
        android:background="@drawable/salad_bowl01"
        android:layout_below="@+id/results_label"
        android:visibility="invisible"
        />



</RelativeLayout>