<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#20262c"
    android:id="@+id/recipe_screen"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/recipe_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/recipeScreen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textStyle"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
       />

    <TextView
        android:id="@+id/ingredients_needed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textStyle"
        android:text="@string/recipe_ingredients"
        android:layout_below="@id/recipeScreen_title"
        android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/db_ingredient_contents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/listStyle"
            android:text="Sample Text: database content goes here."
            android:layout_below="@+id/ingredients_needed"/>


    <TextView
        android:id="@+id/directions_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/db_ingredient_contents"
        style="@style/textStyle"
        android:text="@string/directions"
        android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/db_directions_contents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/listStyle"
            android:text="Sample Text: database content goes here"
            android:layout_below="@+id/directions_list"
            android:paddingBottom="5dp"/>

    <Button android:id="@+id/saved_item_button"
        android:text="@string/saved_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/db_directions_contents"
        />
    <Button
        android:id="@+id/favorite_item_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite_items"
        android:layout_toRightOf="@id/saved_item_button"
        android:layout_marginTop="10dp"
        android:layout_below="@id/db_directions_contents"
        />
    <Button
        android:id="@+id/cooked_item_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cooked_items"
        android:layout_toRightOf="@id/favorite_item_button"
        android:layout_marginTop="10dp"
        android:layout_below="@id/db_directions_contents"/>

    <WebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/cooked_item_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
       />








</RelativeLayout>
</ScrollView>