<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button android:id="@+id/saved_item_button"
        android:text="@string/saved_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="readData"

         />

    <Button
        android:id="@+id/favorite_item_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite_items"
        android:layout_toRightOf="@id/saved_item_button"
        android:layout_marginTop="10dp"
        />
    <Button
        android:id="@+id/cooked_item_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cooked_items"
        android:layout_toRightOf="@id/favorite_item_button"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:id="@+id/lseparator"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_below="@+id/saved_item_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        >

        <TextView android:id="@+id/db_contents"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text=""
            android:textSize="20sp" />
    </ScrollView>

    <ImageButton
        android:id="@+id/home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_home_black_24dp"
        android:onClick="home"
        android:layout_marginEnd="20dp"
        android:layout_alignTop="@+id/cooked_item_button"
        android:layout_alignParentEnd="true" />

</RelativeLayout>